--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>B-Hero : Services</title>
+    <title>Gia Phat : Services</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
     <!-- Font Awesome -->
@@ -75,24 +75,11 @@
 
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto mu-navbar-nav">
-			      <li class="nav-item">
-			        <a href="index.html">Home</a>
-			      </li>
-			      <li class="nav-item"><a href="about-us.html">About us</a></li>
-			      <li class="nav-item active"><a href="services.html">Services</a></li>
-			      <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
-			       <li class="nav-item dropdown">
-				        <a class="dropdown-toggle" href="blog.html" role="button" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				          Blog
-				        </a>
-				       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				          <a class="dropdown-item" href="blog.html">Blog Archive</a>
-				          <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-				        </div>
-				    </li>
-			        <li class="nav-item"><a href="contact.html">Contact us</a></li>
-			        <li class="nav-item"><a href="404.html">404 Page</a></li>
-			    </ul>
+					<li class="nav-item active"><a href="index.html">Home</a></li>
+					<li class="nav-item"><a href="about-us.html">About us</a></li>
+					<li class="nav-item"><a href="services.html">Services</a></li>
+					  <li class="nav-item"><a href="contact.html">Contact us</a></li>
+				  </ul>
 			  </div>
 			</nav>
 		</div>
